# xiaomai-bot

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  0.1.2  CHANGELOG.md  Dockerfile  README.md  bot.py  cliff.toml  config.yaml  config_demo.yaml  data.db  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  start.sh  重构.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-image.yml  pre-commit.yml  repo-diagram.yml  ruff.yml
config/: Switch.yaml  config.yaml  config_demo.yaml
config/group/1090153034/: perm.yaml
config/group/366012221/: perm.yaml
core/: __init__.py  bot.py  config.py  control.py
core/models/frequency_model/: __init__.py
core/models/response_model/: __init__.py
core/models/saya_model/: Metadata_templates.json  __init__.py
core/orm/: __init__.py  tables.py
core/perm_manager/: __init__.py
core/saya_model/: Metadata_templates.json
core/saya_modules/: Metadata_templates.json  __init__.py  modules_data.json
data/battlefield/勋带/: data.json
data/battlefield/勤务小任务/: data.json
data/battlefield/小标语/: data.json
data/battlefield/游戏模式/: data.json
data/battlefield/狗牌/: data.json
data/battlefield/百科/: data.json
docs/: 依赖包管理.md  发布 checklist.md
modules/Bilibili/: __init__.py
modules/Bilibili/data/: bot_config.exp.yaml
modules/DuoQHandle/: __init__.py
modules/Lolicon/: __init__.py
modules/PermManager/: __init__.py
modules/QQGroupManager/: __init__.py  metadata.json
modules/Random_Dingzhen/: __init__.py  metadata.json
modules/Status/: __init__.py
modules/Switch/: __init__.py
modules/bf1战绩/: __init__.py  choose_bg_pic.py  info_cache_manager.py  main_session_auto_refresh.py  record_counter.py
modules/bf1服管/: __init__.py  api_gateway.py  bfgroups_log.py  map_team_info.py  metadata.json
modules/bot_reply/: __init__.py
modules/ill/: __init__.py  metadata.json
modules/required/announcement/: __init__.py  metadata.json
modules/required/auto_upgrade/: __init__.py  metadata.json
modules/required/chat_recorder/: __init__.py  metadata.json
modules/required/exception_catcher/: __init__.py  metadata.json
modules/required/group_manager/: __init__.py  metadata.json
modules/required/helper/: __init__.py  metadata.json
modules/required/multiaccount_manager/: __init__.py
modules/required/perm_manager/: __init__.py  metadata.json
modules/required/response_manager/: __init__.py  metadata.json
modules/required/saya_manager/: __init__.py  metadata.json
modules/required/self_protect/: __init__.py  metadata.json
modules/required/status/: __init__.py  metadata.json
modules/self_contained/Bilibili/: __init__.py
modules/self_contained/ChatGPT/: __init__.py  metadata.json
modules/self_contained/DuoQHandle/: __init__.py
modules/self_contained/EdgeGPT/: __init__.py  metadata.json
modules/self_contained/Lolicon/: __init__.py
modules/self_contained/QQGroupManager/: __init__.py  metadata.json
modules/self_contained/Random_Dingzhen/: __init__.py
modules/self_contained/Status/: __init__.py
modules/self_contained/Switch/: __init__.py
modules/self_contained/ai_chat/: __init__.py  config.py  metadata.json  plugins_registry.py
modules/self_contained/ascii_art_generator/: __init__.py  generator.py  metadata.json
modules/self_contained/auto_agree_join_request/: metadata.json
modules/self_contained/av_bt/: __init__.py  metadata.json
modules/self_contained/avatar_fun/: __init__.py  metadata.json
modules/self_contained/bf1_info/: __init__.py  info_cache_manager.py  main_session_auto_refresh.py  metadata.json  record_counter.py  utils.py
modules/self_contained/bf1_join_request_handle/: __init__.py  metadata.json  utils.py
modules/self_contained/bf1_servermanager/: __init__.py  api_gateway.py  blocked.yaml  main_session_auto_refresh.py  map_team_info.py  metadata.json  utils.py
modules/self_contained/bf1_warm_server/: __init__.py  metadata.json  route.py  utils.py  warm.py
modules/self_contained/bf1战绩/: __init__.py  choose_bg_pic.py  info_cache_manager.py  main_session_auto_refresh.py  metadata.json
modules/self_contained/bf1服管/: __init__.py  bfgroups_log.py
modules/self_contained/bilibili_dynamic/: __init__.py  bilibili_request.py  dynamic_list.json  dynamic_shot.py  metadata.json
modules/self_contained/bilibili_resolve/: __init__.py  metadata.json  utils.py
modules/self_contained/bot_reply/: __init__.py
modules/self_contained/chat_gpt/: __init__.py  gpt_mode.json  manager.py  metadata.json  preset.py
modules/self_contained/claude/: __init__.py  config.json  metadata.json
modules/self_contained/dragon_pic_mute/: __init__.py  metadata.json
modules/self_contained/dragon_pic_recall/: __init__.py  metadata.json
modules/self_contained/edge_gpt/: __init__.py  metadata.json
modules/self_contained/emoji_mix/: __init__.py  metadata.json  util.py
modules/self_contained/genshin_chara_card/: __init__.py  metadata.json
modules/self_contained/github_card/: __init__.py  metadata.json
modules/self_contained/homo_number_converter/: __init__.py  metadata.json  utils.py
modules/self_contained/ill/: __init__.py  ill_templates.json  (+1 more)
scripts/: bump.py
statics/: alembic_env_py_content.txt  config_exp.json
tests/md2img/: download_resources.py  main.py  md2img.py
util/: config.py  http_utils.py  internal_utils.py  strings.py  text2image.py  user_agent.py
util/browser/: __init__.py
util/html2pic/: __init__.py
utils/: Singleton.py  alembic.py  bump.py  config.py  files.py  image.py  internal_utils.py  launch_time.py  message_chain.py  parse_messagechain.py  readenv.py  self_upgrade.py  string.py  text2img.py  timeout_manager.py  timeutils.py  tui.py  type.py  version_info.py  waiter.py
utils/UI/: __init__.py  models.py
utils/bf1/: account_manager.py  account_manager_demo.py  ap_info.json  bf_utils.py  data_handle.py  default_account.py  gateway_api.py  gateway_api_refactor.py  map_team_info.py
utils/browser/: __init__.py
utils/text2img/: __init__.py  md2img.py
utils/text_engine/: text_engine.py
(+68 files in other folders)
